[package]
name          = "cw-it"
version       = "0.4.0"
authors       = ["Pacman <pacman@apollo.farm>", "Sturdy <sturdy@apollo.farm>", "Henk ter Harmsel <henk@xpunks.club>"]
edition       = "2021"
license       = "MPL-2.0"
description   = "A crate of utils for integration testing CosmWasm smart contracts"
documentation = "https://docs.rs/cw-it"
repository    = "https://github.com/onxrp/cw-it"
readme        = "README.md"

exclude = [
  # Those files are rust-optimizer artifacts. You might want to commit them for convenience but they should not be part of the source code publication.
  "contract.wasm",
  "hash.txt",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["rlib"]

[profile.release]
opt-level        = 3
debug            = false
rpath            = false
lto              = true
debug-assertions = false
codegen-units    = 1
panic            = 'abort'
incremental      = false
overflow-checks  = true

[features]
default              = []
astroport            = ["cw20", "dep:astroport"]
osmosis              = ["proptest", "apollo-utils", "osmosis-test-tube"]
coreum               = ["dep:coreum-wasm-sdk", "astroport/coreum", "astroport-pair/coreum", "astroport-pair-concentrated/coreum", "astroport-pair-stable/coreum", "astroport-factory/coreum", "astroport-incentives/coreum", "astroport-staking/coreum"]
rpc-runner           = ["bip32"]
chain-download       = []
multi-test           = ["bech32", "sha2", "cw-multi-test", "paste", "regex"]
astroport-multi-test = ["multi-test", "astroport", "astroport-token", "astroport-native-coin-registry", "astroport-factory", "astroport-maker", "astroport-pair-stable", "astroport-pair", "astroport-router", "astroport-staking", "astroport-vesting", "astroport-whitelist", "astroport-pair-concentrated", "astroport-incentives"]
osmosis-test-tube    = ["dep:osmosis-test-tube"]
coreum-test-tube     = ["coreum", "dep:coreum-test-tube"]

[package.metadata.scripts]
optimize = """docker run --rm -v "$(pwd)":/code \
  --mount type=volume,source="$(basename "$(pwd)")_cache",target=/code/target \
  --mount type=volume,source=registry_cache,target=/usr/local/cargo/registry \
  cosmwasm/rust-optimizer:0.12.6
"""

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[package.metadata.cargo-machete]
ignored = ["astroport-token", "astroport-native-coin-registry", "astroport-factory", "astroport-maker", "astroport-pair-stable", "astroport-pair", "astroport-router", "astroport-staking", "astroport-vesting", "astroport-whitelist"]

[dependencies]
anyhow            = "1.0.100"
bip32             = { version = "0.5.3", features = ["bip39"], optional = true }
config            = { version = "0.15.19", features = ["yaml"] }
coreum-test-tube  = { version = "4.1.2", optional = true }
coreum-wasm-sdk   = { version = "=1.0.0", optional = true }
cosmrs            = { version = "0.15.0", features = ["rpc", "cosmwasm"] }
cosmwasm-schema   = "1.5.11"
cosmwasm-std      = { version = "1.5.11", features = ["stargate"] }
cw-storage-plus   = "1.2.0"
osmosis-std       = "0.25.0"
osmosis-test-tube = { version = "25.0.0", optional = true }
prost             = { version = "0.12", default-features = false, features = ["prost-derive"] }
serde             = { version = "1.0.228", default-features = false, features = ["derive"] }
strum             = { version = "0.27.2", features = ["derive"] }
test-tube         = { version = "0.7.0", features = ["module-wrappers"] }
thiserror         = { version = "2.0.17" }
tokio             = { version = "1.48.0" }

# Astroport deps
astroport = { git = "https://github.com/onxrp/astroport-core", optional = true }
cw20      = { version = "1.1", optional = true }

# Astroport contracts for multi-test
astroport-factory              = { git = "https://github.com/onxrp/astroport-core", optional = true, features = ["library"] }
astroport-incentives           = { git = "https://github.com/onxrp/astroport-core", optional = true, features = ["library"] }
astroport-maker                = { git = "https://github.com/onxrp/astroport-core", optional = true }
astroport-native-coin-registry = { git = "https://github.com/onxrp/astroport-core", optional = true, features = ["library"] }
astroport-pair                 = { git = "https://github.com/onxrp/astroport-core", optional = true }
astroport-pair-concentrated    = { git = "https://github.com/onxrp/astroport-core", optional = true, features = ["library"] }
astroport-pair-stable          = { git = "https://github.com/onxrp/astroport-core", optional = true, features = ["library"] }
astroport-router               = { git = "https://github.com/onxrp/astroport-core", optional = true }
astroport-staking              = { git = "https://github.com/onxrp/astroport-core", optional = true }
astroport-token                = { version = "=1.1.1", optional = true, features = ["library"] }
astroport-vesting              = { git = "https://github.com/onxrp/astroport-core", optional = true, features = ["library"] }
astroport-whitelist            = { git = "https://github.com/onxrp/astroport-core", optional = true, features = ["library"] }

# Osmosis deps
apollo-utils = { version = "0.1.1", optional = true }
proptest     = { version = "1.9.0", optional = true }
regex        = { version = "1.12.2", optional = true }

# Cw-multi-test deps
bech32        = { version = "0.11.0", optional = true }
cw-multi-test = { version = "1.2.0", optional = true, features = ["cosmwasm_1_3"] }
paste         = { version = "1.0.12", optional = true }
sha2          = { version = "0.10.9", optional = true }

# RPC Runner and chain-download deps
constcat = "0.6.1"

[dev-dependencies]
cw20      = "1.1"
cw20-base = { version = "1.1", features = ["library"] }
test-case = "3.0.0"
